[package]
name = "node-merk"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_merk"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.3"

[dependencies]
neon = "0.8.3"
merk = { git = "https://github.com/nomic-io/merk", rev = "e9038a659e1ad3cf13720b57be88e2845d0d6a01"}
# merk = { path = "../../merk" }
failure = "0.1.6"
